--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -8,7 +8,7 @@
       \begin{tabularx}{\textwidth}{s|s|s|m}
     \hline\hline
     \textbf{Authors} & \textbf{Sample} & \textbf{Estimation method} & \textbf{Covariates}\\\hline
-    \textcite{poterba_tax_1984} & US (1974-1982) & & \makecell{$RHP(+), NCD(-), W(+),$\\$Cr(+)$} \\\hline
+    % \textcite{poterba_tax_1984} & US (1974-1982) & Numerical simulations & \makecell{$RHP(+), NCD(-), W(+),$\\$Cr(+)$} \\\hline
     \textcite{topel_1988_Housing} & US (1963-1983) & Instrumental variable & \makecell{$HeP(+), INT(-), INFLA(-),$\\$TIME(-), W(-)$} \\\hline
     \textcite{egebo_1990_MODEL} & 7 OECD countries (1960-1987) & OLS & \makecell{$RDY(+), RINT(-), PRIr(-),$\\$PRSr(+)$} \\\hline
     \textcite{mccarthyMonetaryPolicyTransmission2002} & US (1975-1985 and 1986-2000) & EC-GMM & \makecell{$HP(+), CC(-), SINT(-),$\\$LAND(-), H(-)$} \\\hline
