--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -810,10 +810,10 @@ The subprime crisis and the Great Recession of the US economy had changed the la
 housing prices and finance, and residential investment.
 Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 #+end_comment
-*  Housing Dynamics and Business Cycle in the US Economy :ignore:
-Before the subprime crisis and the subsequent Great Recession (2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
+* Housing Dynamics and Business Cycle in the US Economy :ignore:
+Before the subprime crisis and the subsequent Great Recession (GR, 2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
 Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure ref:fig:share).
-The subprime crisis and the Great Recession of the US economy had changed the landscape, making clear the macroeconomic role of housing prices and finance, and residential investment.
+Since the Global Financial Crisis, this landscape has changed, making clear the macroeconomic role of housing prices and finance, and residential investment.
 Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 
 There are, nevertheless, two notable exceptions. In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
@@ -839,7 +839,7 @@ Based on Granger causality tests for the US from 1952 to 1992, he concludes that
 textcite:green_follow_1997 relates this result to the forward-looking behavior of households.
 Thus, he restricts the relevance of residential investment as a temporal precedence indicator.
 
-textcite:leamer_housing_2007 is more incisive. He states that housing is the business cycle.
+textcite:leamer_housing_2007 is more incisive and states that housing is the business cycle.
 In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
 The economic cycle of US economy would be a consumer cycle: "first homes, then cars, last business investment" \cite[p.~8]{leamer_housing_2007}.
 In a follow up work, the author declare that nine out of eleven US economic recessions were preceded by a severe downturn of residential investment, in the post-war period cite:leamer_housing_2015.
@@ -876,8 +876,10 @@ Talvez discutir preço aqui
 In a heterodox perspective, textcites:fiebiger_semi-autonomous_2018,fiebiger_trend_2017 present residential investment as a Luxemburg-type external market providing a source of autonomous demand to absorb economic surplus.
 Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
 Figure ref:fig:trend presents the trend of GDP and residential investment growth rate by estimating a HP filter.
-In summary, both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
-Recently, textcite:perez_Montiel_2021 test econometrically the assertion that this kind of expenditure leads not only the businesses cycle but also the long-run economic growth for the US economy. Their research finds evidence of this claim, without finding any relevant feedback from output to residential investment.
+Both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
+Recently, cite:perez_Montiel_2021 find that residential investment leads both the business cycles and the long-run economic growth for the US economy.
+long-run economic growth for the US economy.
+Similar to cite:girardi_long-run_2016, they do not report any relevant feedback from output to residential investment, configuring this expenditure as an autonomous one.
 
 #+begin_export latex
 \begin{figure}[H]
