Corrigida seção 2 e 3. Seguindo para a 4.

--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -152,10 +152,10 @@ Beyond this adapted Tobin's Q they also include real house prices, GDP level, po
 They conclude that real house prices growth, nominal interest rate, net migration rates and existing house stock are the main determinants of residential investment.
 
 Other common ground in the housing literature is the relevance of interest rate for residential investment.
-In a OLS model for 7 OECD countries, textcite:egebo_1990_MODEL concludes that real disposable income and interest rate deflated by consumer price index are relevant for explain residential investment movements.
+In a OLS model for 7 OECD countries, textcite:egebo_1990_MODEL concludes that real disposable income and interest rate deflated by consumer price index are relevant for explaining residential investment movements.
 For the US in particular, they report that mortgage interest rate coefficients are robust.
-Some scholars have reported that the residential investment sensitivity to interest rate are still valid after institutional changes of mid-1980s[fn::The savings and loans crisis was followed by a set of institutional changes which affected the housing finance system. Just to name two of them: Depository Institutions Deregulation and Monetary Control Act (1980); Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA, 1989). For a detailed chronology, see  \textcite[Appendix B]{mccarthyMonetaryPolicyTransmission2002} and textcite:green_american_2005; for a discussion on the consequences for households access to consumption and mortgage credit see textcite:federal_deposit_insurance_corporation_savings_1997,wall_too_2010.].
-textcite:mccarthyMonetaryPolicyTransmission2002, for instance, evaluate the responsiveness of residential investment to interest rates considering these changes in the housing financing system.
+Some scholars have reported that the residential investment sensitivity to interest rate are still valid after institutional changes of mid-1980s[fn::The savings and loans crisis was followed by a set of institutional changes which affected the housing financial system. Just to name two of them: Depository Institutions Deregulation and Monetary Control Act (1980); Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA, 1989). For a detailed chronology, see  \textcite[Appendix B]{mccarthyMonetaryPolicyTransmission2002} and textcite:green_american_2005; for a discussion on the consequences for households access to consumption and mortgage credit see textcite:federal_deposit_insurance_corporation_savings_1997,wall_too_2010.].
+textcite:mccarthyMonetaryPolicyTransmission2002, for instance, evaluate the responsiveness of residential investment to interest rates considering these changes in the housing financial system.
 In order to isolate these effects, they estimate  a GMM model for the US in two sub-samples (1975-1985 and 1986-2000).
 They conclude that the residential investment response magnitude to a monetary shock before and after these institutional breaks are similar.
 textcite:gauger_residential_2003 also evaluate the consequences of deregulation of depository institutions throughout the 1980s.
