--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -877,9 +877,8 @@ In a heterodox perspective, textcites:fiebiger_semi-autonomous_2018,fiebiger_tre
 Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
 Figure ref:fig:trend presents the trend of GDP and residential investment growth rate by estimating a HP filter.
 Both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
-Recently, cite:perez_Montiel_2021 find that residential investment leads both the business cycles and the long-run economic growth for the US economy.
-long-run economic growth for the US economy.
-Similar to cite:girardi_long-run_2016, they do not report any relevant feedback from output to residential investment, configuring this expenditure as an autonomous one.
+Recently, textcite:perez_Montiel_2021 find that residential investment leads both the business cycles and the long-run economic growth for the US economy.
+Similar to textcite:girardi_long-run_2016, they do not report any relevant feedback from output to residential investment, configuring this expenditure as an autonomous one.
 
 #+begin_export latex
 \begin{figure}[H]
